Issue #3 - fixes overflow problem in footer

--- a/assets/css/sass/layout/_footer.scss
+++ b/assets/css/sass/layout/_footer.scss
@@ -14,6 +14,7 @@
 		background-repeat: no-repeat;
 		background-position: center -150px;
 		background-color: $pink;
+		overflow: hidden;
 		// background-size: 200%;
 		&.no-testimonial {
 			background-position: left bottom;
